--- a/Rapport/papier1/christophe.tex
+++ b/Rapport/papier1/christophe.tex
@@ -70,13 +70,13 @@
 %%
 % Regular title as in the article class.
 %
-\title{Composition de workflows pour le filtrage sémantique d'informations}
+\title{Vers la composition de workflows pour le filtrage sémantique d'informations}
 
 % \titlerunning{} has to be set to either the main title or its shorter
 % version for the running heads. Use {\sf} for highlighting your system
 % name, application, or a tool.
 %
-\titlerunning{workflows et filtrage sémantique}
+\titlerunning{Vers la composition de workflows}
 
 % For only the editors. Authors, please keep this commented out
 % \volumeinfo
@@ -199,7 +199,7 @@ Dans le cadre de l'étude présentée précédemment nous avons donc mis au poin
 
 \begin{figure}[htb!]
 	\begin{centering}
-	\includegraphics[width=0.7\textwidth]{diagramme-Archi.png}
+	\includegraphics[width=0.9\textwidth]{diagramme-Archi.png}
 	\caption{Workflow de traitements....}
 	\label{fig:mmFM}
 	\end{centering}
@@ -219,20 +219,19 @@ De manière concrète nous utilisons les services d'annotation suivants:
 
 - \textbf{WikiMeta} fonctionne de la même manière qu'OpenCalais mais permet de récupérer directement des entités nommées pointant vers la base de connaissance DBpedia, il peut donc être utilisé seul en tant que service d'annotation principal \\
 
+Et les services de généralisations suivants :
+
 - \textbf{DBpedia} travaille sur les données provenant du service d'annotation WikiMeta et permet de les enrichir sémantiquement à l'aide de liens vers d'autres ressources liées à l'élément \\
 
 - \textbf{INSEE geo} \url{http://rdf.insee.fr/geo/} La base de données RDF de l'INSEE nous permet de récupérer les ensembles géographiques liées à une entité nommée géographique. Ce service d'annotation géographique s'utilise donc uniquement en aval d'un service d'annotation classique qui récupère des informations géographiques. Il renvoi en sortie des URI vers les entités géographiques liées à la news étudiée. Nous utilisons pour cette interrogation la requête SPARQL suivante qui permet d'avoir les informations désirées:
-
 \begin{verbatim}
 PREFIX geo: <http://rdf.insee.fr/geo/>
 SELECT = DISTINCT = ?nom ?type WHERE{
 	 ?entite geo:nom ?nom
 	 ?entite rdf:type ?type
-	 { 
-		  ?ville geo:nom ?nomVille
-		  ?entite geo:subdivision* ?ville
-		  ?FILTER(regex(str(?nomVille), ‘Nice’, ‘i’))
-	 }}
+	 { 	  ?ville geo:nom ?nomVille
+      ?entite geo:subdivision* ?ville
+      ?FILTER(regex(str(?nomVille), ‘Nice’, ‘i’))    }}
 \end{verbatim}
 
 
@@ -248,11 +247,11 @@ Le workflow de filtrage permet de créer des critères utilisateurs affin de ré
 
 \section{Perspective : Vers la construction automatique de workflows }
 \label{sect:perspectives}
-Notre objectif à terme est de construire une ligne de produits qui capturerait les différents sources et systèmes d'annotation disponibles, les qualifierait et permettrait à un utilisateur final de construire ses propres workflows d'annotation en le guidant dans sa sélection des différents services.
+Notre objectif à terme est de construire une ligne de produits qui capturerait les différentes sources et services disponibles, les qualifierait et permettrait à un utilisateur final de construire ses propres workflows d'annotation en le guidant dans sa sélection des différents services.
 
-\subsection{Objectifs et limites}
+\subsection{Objectifs}
 
-La construction automatique de workflows d'annotations permet de répondre à différentes problématiques. Du point de vue de l'utilisateur final, l'utilisation d'une construction de workflows pourrait lui permettre, à partir d'un flux sélectionné, d'affiner la sélection des services d'annotations qu'il souhaite utiliser afin d'obtenir l'information la plus complète pour son utilisation.
+La construction automatique de workflows d'annotation permet de répondre à différentes problématiques. Du point de vue de l'utilisateur final, l'utilisation d'une construction de workflows pourrait lui permettre, à partir d'un flux sélectionné, d'affiner la sélection des services d'annotations qu'il souhaite utiliser afin d'obtenir l'information la plus complète pour son utilisation.
 
 En outre, à l'heure actuelle le workflow d'annotation interroge tous les services d'annotations disponibles, sans distinction de catégories, ce qui génère de nombreux appels de service dont la plupart sont inutiles. L'utilisation d'une construction automatique à partir des choix de l'utilisateur permettrait de restreindre les appels aux seuls services pertinents et donc d'accélérer les temps de traitements en réduisant la charge des services. 
 
@@ -262,6 +261,13 @@ Les choix que va faire l'utilisateur vont avoir un impact sur trois concepts inh
 
 La figure ... montre ainsi le FM de \textit{Service d'Annotation} : les produits finaux correspondent aux feuilles de la feature \textit{Product}, les thèmes aux feuilles de la feature \textit{Thème} et les langues à celles de la feature \textit{Langue}. La sélection d'une feature de langue ou de thème influe directement sur le choix d'un produit final par le jeu des contraintes internes au FM. 
 
+\begin{figure}[htb!]
+	\begin{centering}
+	\includegraphics[scale=0.7]{FM.png}
+	\caption{Workflow de traitements....}
+	\label{fig:mmFM}
+	\end{centering}
+\end{figure}
 %\si{à voir si on garde en dessous...}
 %Chacun des FM des différents concepts est une construction réalisée à partir d'une approche bottom-up. Nous partons des produits existants, en les exprimant sous forme de FM individuels, puis nous effectuons la fusion de ces FM afin d'obtenir une SPL modélisant les différents produits disponibles ainsi que leur variabilité \cite{Acher2011}.
 
